clusters/jellybuntu/gpu/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gpu
  labels:
    app.kubernetes.io/part-of: jellybuntu
