clusters/jellybuntu/gpu/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: gpu
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.elysium.industries`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  namespace: gpu
  labels:
    app.kubernetes.io/part-of: jellybuntu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.elysium.industries`)
      kind: Rule
      middlewares:
        - name: admin-ipallowlist
      services:
        - name: tdarr
          port: 8265
